@@ -37,7 +37,7 @@
  36: <span class='def-Number'>23</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'>   </span><span class='def-Number'>23</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'></span>
  37: <span class='asp-Insertion def-InsertionEmbed def-Insertion'> </span><span class='def-Number'>23</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'> </span><span class='def-Comment def-Syntax'>'//xxx 23</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'></span>
  38: <span class='def-Number'>23</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'></span>
- 39: <span class='def-Symbol'>+</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'>as</span><span class='def-Comment def-Syntax'>'ssss</span><span class='asp-CloseTag asp-Tag def-EmbeddedTag def-Tag'>%></span>
+ 39: <span class='def-Symbol'>+</span><span class='def-Keyword'>as</span><span class='def-Comment def-Syntax'>'ssss</span><span class='asp-CloseTag asp-Tag def-EmbeddedTag def-Tag'>%></span>
  40: 
  41: sdf xxsdf
  42:   false = "xxx<span class='asp-OpenTag asp-Tag def-EmbeddedTag def-Tag'>&lt;%</span><span class='asp-Insertion def-InsertionEmbed def-Insertion'> sdf </span><span class='asp-CloseTag asp-Tag def-EmbeddedTag def-Tag'>%></span>xx"
